force-app/main/default/objects/QuoteFieldEditability__mdt/QuoteFieldEditability__mdt.object-meta.xml
<CustomObject>
    <label>Quote Field Editability</label>
    <pluralLabel>Quote Field Editability</pluralLabel>
</CustomObject>