force-app/main/default/objects/QuoteFieldEditability__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>Object Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>