force-app/main/default/objects/QuoteFieldEditability__mdt/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <label>Profile Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>