force-app/main/default/objects/QuoteFieldEditability__mdt/fields/QuoteStatus__c.field-meta.xml
<CustomField>
    <fullName>QuoteStatus__c</fullName>
    <label>Quote Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>